--- a/client/collabFrontEnd/src/components/Header/Header.css
+++ b/client/collabFrontEnd/src/components/Header/Header.css
@@ -3,7 +3,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #2c00009f;
+    background-color: #c4d8f59f;
+    border-radius: 0.6rem;
     width: 100%;
     margin: 0 auto;
     position: relative;
