--- a/client/collabFrontEnd/src/components/Header/Header.css
+++ b/client/collabFrontEnd/src/components/Header/Header.css
@@ -5,7 +5,7 @@ header {
     padding: 20px;
     background-color: #c4d8f59f;
     border-radius: 0.6rem;
-    width: 100%;
+    width: 100;
     margin: 0 auto;
     position: relative;
     box-sizing: border-box;
