--- a/client/collabFrontEnd/src/components/Body/Body.css
+++ b/client/collabFrontEnd/src/components/Body/Body.css
@@ -3,11 +3,22 @@
     /* border-bottom: 3px solid #e0354b; */
     /* box-sizing: border-box; */
     overflow-x: hidden;
+    /* overflow-y: auto; */
 }
-.collab-logo{
+.Collab-logo{
     box-sizing: border-box;
-    position: relative;
+    max-width: 100%;
+    height: 10px;
+    overflow: hidden;
 }
-form input {
-    margin: 10px;
+.HeroText1{
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1.2;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+.Hero2{
+    display: flex;
+    justify-content: space-around;
 }
